@@ -29,7 +29,7 @@
 
   <import file="../analysis-module-build.xml"/>
 	
-  <target name="jflex" depends="jflex-check,clean-jflex,-gen-uax29-supp-macros,
+  <target name="jflex" depends="-install-jflex,clean-jflex,-gen-uax29-supp-macros,
                                 -jflex-StandardAnalyzer,-jflex-UAX29URLEmailTokenizer,
                                 -jflex-wiki-tokenizer,-jflex-HTMLStripCharFilter"/>
 
@@ -40,11 +40,7 @@
   </target>
 
   <target name="-jflex-HTMLStripCharFilter"
-          depends="init,jflex-check,generate-jflex-html-char-entities"
-          if="jflex.present">
-    <taskdef classname="jflex.anttask.JFlexTask" name="jflex">
-      <classpath refid="jflex.classpath"/>
-    </taskdef>
+          depends="init,generate-jflex-html-char-entities">
     <jflex file="src/java/org/apache/lucene/analysis/charfilter/HTMLStripCharFilter.jflex"
            outdir="src/java/org/apache/lucene/analysis/charfilter"
            nobak="on" inputstreamctor="false"/>
@@ -65,25 +61,16 @@
     <fixcrlf file="src/java/org/apache/lucene/analysis/charfilter/HTMLCharacterEntities.jflex" encoding="UTF-8"/>
   </target>
 
-  <target name="-jflex-wiki-tokenizer" depends="init,jflex-check" if="jflex.present">
-    <taskdef classname="jflex.anttask.JFlexTask" name="jflex">
-      <classpath refid="jflex.classpath"/>
-    </taskdef>
+  <target name="-jflex-wiki-tokenizer" depends="init,-install-jflex">
     <run-jflex dir="src/java/org/apache/lucene/analysis/wikipedia" name="WikipediaTokenizerImpl"/>
   </target>
 
-  <target name="-jflex-StandardAnalyzer" depends="init,jflex-check" if="jflex.present">
-    <taskdef classname="jflex.anttask.JFlexTask" name="jflex">
-			<classpath refid="jflex.classpath"/>
-    </taskdef>
+  <target name="-jflex-StandardAnalyzer" depends="init,-install-jflex">
     <run-jflex dir="src/java/org/apache/lucene/analysis/standard" name="StandardTokenizerImpl"/>
     <run-jflex dir="src/java/org/apache/lucene/analysis/standard" name="ClassicTokenizerImpl"/>
   </target>
 
-  <target name="-jflex-UAX29URLEmailTokenizer" depends="jflex-check" if="jflex.present">
-    <taskdef classname="jflex.anttask.JFlexTask" name="jflex">
-			<classpath refid="jflex.classpath"/>
-    </taskdef>
+  <target name="-jflex-UAX29URLEmailTokenizer" depends="init,-install-jflex">
     <run-jflex dir="src/java/org/apache/lucene/analysis/standard" name="UAX29URLEmailTokenizerImpl"/>
   </target>
   
